<resources>
    <string name="app_name">HTTP Poster</string>
    <string name="server_url_hint">Server URL</string>
    <string name="prompt_hint">Type the text to POST</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="voice">Voice</string>
    <string name="stop">Stop</string>
    <string name="response_title">Response</string>
    <string name="thinking">Sending…</string>
    <string name="listening">Listening…</string>
    <string name="transcribing">Transcribing…</string>
</resources>
